--- a/locales/fr.json
+++ b/locales/fr.json
@@ -294,5 +294,7 @@
     "Talk to support by clicking here": "Parlez au support en cliquant <span>ici</span>",
     "Current subscription billing cycle": "Cycle de facturation actuel de l'abonnement",
     "We hope you come back someday": "Nous espérons que vous reviendrez un jour.",
-    "If you see this message, please contact support": "Si vous voyez ce message, veuillez contacter le support."
+    "If you see this message, please contact support": "Si vous voyez ce message, veuillez contacter le support.",
+    "Something went wrong!": "Quelque chose s'est mal passé !",
+    "Try again": "Réessayez"
 }
