--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -294,5 +294,7 @@
     "Talk to support by clicking here": "Parla con il supporto cliccando <span>qui</span>",
     "Current subscription billing cycle": "Ciclo di fatturazione corrente dell'abbonamento",
     "We hope you come back someday": "Speriamo che tu torni un giorno.",
-    "If you see this message, please contact support": "Se vedi questo messaggio, contatta l'assistenza."
+    "If you see this message, please contact support": "Se vedi questo messaggio, contatta l'assistenza.",
+    "Something went wrong!": "Qualcosa è andato storto!",
+    "Try again": "Riprova"
 }
