--- a/locales/pt.json
+++ b/locales/pt.json
@@ -294,5 +294,7 @@
     "Talk to support by clicking here": "Fale com o suporte clicando <span>aqui</span>",
     "Current subscription billing cycle": "Ciclo de faturamento atual da assinatura",
     "We hope you come back someday": "Esperamos que você volte algum dia.",
-    "If you see this message, please contact support": "Se você ver esta mensagem, por favor, entre em contato com o suporte."
+    "If you see this message, please contact support": "Se você ver esta mensagem, por favor, entre em contato com o suporte.",
+    "Something went wrong!": "Ocorreu um erro!",
+    "Try again": "Tente novamente"
 }
