--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -296,5 +296,14 @@
     "We hope you come back someday": "Speriamo che tu torni un giorno.",
     "If you see this message, please contact support": "Se vedi questo messaggio, contatta l'assistenza.",
     "Something went wrong!": "Qualcosa è andato storto!",
-    "Try again": "Riprova"
+    "Try again": "Riprova",
+    "Languages": "Lingue",
+    "Logout": "Logout",
+    "Profile": "Profilo",
+    "Access not permitted": "Accesso non consentito",
+    "All languages are available to you": "Tutte le lingue sono disponibili per te",
+    "Select language": "Seleziona la lingua",
+    "You have successfully set up a new language to learn!": "Hai impostato con successo una nuova lingua da imparare!",
+    "Don't forget to study with the Petutors": "Non dimenticare di studiare con i Petutors",
+    "Current": "Corrente"
 }
