--- a/locales/pt.json
+++ b/locales/pt.json
@@ -296,5 +296,14 @@
     "We hope you come back someday": "Esperamos que você volte algum dia.",
     "If you see this message, please contact support": "Se você ver esta mensagem, por favor, entre em contato com o suporte.",
     "Something went wrong!": "Ocorreu um erro!",
-    "Try again": "Tente novamente"
+    "Try again": "Tente novamente",
+    "Languages": "Idiomas",
+    "Logout": "Sair",
+    "Profile": "Perfil",
+    "Access not permitted": "Acesso não permitido",
+    "All languages are available to you": "Todos os idiomas estão disponíveis para você",
+    "Select language": "Selecionar idioma",
+    "You have successfully set up a new language to learn!": "Você configurou com sucesso um novo idioma para aprender!",
+    "Don't forget to study with the Petutors": "Não se esqueça de estudar com os Petutors",
+    "Current": "Atual"
 }
