improve: add seo and analytics

--- a/locales/en.json
+++ b/locales/en.json
@@ -305,5 +305,18 @@
   "Select language": "Select language",
   "You have successfully set up a new language to learn!": "You have successfully set up a new language to learn!",
   "Don't forget to study with the Petutors": "Don't forget to study with the Petutors",
-  "Current": "Current"
+  "Current": "Current",
+  "Simplify Your Studies of a New Language with AI\nLearn Faster and More Effectively with Our Platform\nOur platform uses artificial intelligence to personalize language learning, adapting to your individual needs and pace Models are used to offer personalized learning experiences, making the learning process simpler and more effective": "Simplify Your Studies of a New Language with AI.\nLearn Faster and More Effectively with Our Platform.\nOur platform uses artificial intelligence to personalize language learning, adapting to your individual needs and pace. Models are used to offer personalized learning experiences, making the learning process simpler and more effective.",
+  "Dashboard": "Dashboard",
+  "language learning": "language learning",
+  "artificial intelligence": "artificial intelligence",
+  "content personalization": "content personalization",
+  "learning efficiency": "learning efficiency",
+  "learning platform": "learning platform",
+  "AI models": "AI models",
+  "AI-powered pronunciation testing": "AI-powered pronunciation testing",
+  "AI-powered response correction": "AI-powered response correction",
+  "personalized learning experience": "personalized learning experience",
+  "simplified language study": "simplified language study",
+  "accelerated learning": "accelerated learning"
 }
