--- a/locales/es.json
+++ b/locales/es.json
@@ -305,5 +305,18 @@
     "Select language": "Seleccionar idioma",
     "You have successfully set up a new language to learn!": "¡Has configurado exitosamente un nuevo idioma para aprender!",
     "Don't forget to study with the Petutors": "No olvides estudiar con los Petutors",
-    "Current": "Actual"
+    "Current": "Actual",
+    "Simplify Your Studies of a New Language with AI\nLearn Faster and More Effectively with Our Platform\nOur platform uses artificial intelligence to personalize language learning, adapting to your individual needs and pace Models are used to offer personalized learning experiences, making the learning process simpler and more effective": "Simplifica tus estudios de un nuevo idioma con IA.\nAprende más rápido y de manera más efectiva con nuestra plataforma.\nNuestra plataforma utiliza inteligencia artificial para personalizar el aprendizaje de idiomas, adaptándose a tus necesidades individuales y ritmo. Se utilizan modelos para ofrecer experiencias de aprendizaje personalizadas, haciendo el proceso de aprendizaje más simple y eficaz.",
+    "Dashboard": "Panel de control",
+    "language learning": "aprendizaje de idiomas",
+    "artificial intelligence": "inteligencia artificial",
+    "content personalization": "personalización de contenido",
+    "learning efficiency": "eficiencia de aprendizaje",
+    "learning platform": "plataforma de aprendizaje",
+    "AI models": "modelos de IA",
+    "AI-powered pronunciation testing": "pruebas de pronunciación impulsadas por IA",
+    "AI-powered response correction": "corrección de respuestas impulsada por IA",
+    "personalized learning experience": "experiencia de aprendizaje personalizada",
+    "simplified language study": "estudio de idioma simplificado",
+    "accelerated learning": "aprendizaje acelerado"
 }
