--- a/locales/fr.json
+++ b/locales/fr.json
@@ -305,5 +305,18 @@
     "Select language": "Sélectionnez la langue",
     "You have successfully set up a new language to learn!": "Vous avez réussi à configurer une nouvelle langue à apprendre !",
     "Don't forget to study with the Petutors": "N'oubliez pas d'étudier avec les Petutors",
-    "Current": "Actuel"
+    "Current": "Actuel",
+    "Simplify Your Studies of a New Language with AI\nLearn Faster and More Effectively with Our Platform\nOur platform uses artificial intelligence to personalize language learning, adapting to your individual needs and pace Models are used to offer personalized learning experiences, making the learning process simpler and more effective": "Simplifiez vos études d'une nouvelle langue avec l'IA.\nApprenez plus rapidement et de manière plus efficace avec notre plateforme.\nNotre plateforme utilise l'intelligence artificielle pour personnaliser l'apprentissage des langues, en s'adaptant à vos besoins individuels et à votre rythme. Des modèles sont utilisés pour offrir des expériences d'apprentissage personnalisées, rendant le processus d'apprentissage plus simple et plus efficace.",
+    "Dashboard": "Tableau de bord",
+    "language learning": "apprentissage des langues",
+    "artificial intelligence": "intelligence artificielle",
+    "content personalization": "personnalisation du contenu",
+    "learning efficiency": "efficacité d'apprentissage",
+    "learning platform": "plateforme d'apprentissage",
+    "AI models": "modèles d'IA",
+    "AI-powered pronunciation testing": "test de prononciation alimenté par l'IA",
+    "AI-powered response correction": "correction de réponse alimentée par l'IA",
+    "personalized learning experience": "expérience d'apprentissage personnalisée",
+    "simplified language study": "étude simplifiée des langues",
+    "accelerated learning": "apprentissage accéléré"
 }
