--- a/locales/it-IT.json
+++ b/locales/it-IT.json
@@ -305,5 +305,18 @@
     "Select language": "Seleziona la lingua",
     "You have successfully set up a new language to learn!": "Hai impostato con successo una nuova lingua da imparare!",
     "Don't forget to study with the Petutors": "Non dimenticare di studiare con i Petutors",
-    "Current": "Corrente"
+    "Current": "Corrente",
+    "Simplify Your Studies of a New Language with AI\nLearn Faster and More Effectively with Our Platform\nOur platform uses artificial intelligence to personalize language learning, adapting to your individual needs and pace Models are used to offer personalized learning experiences, making the learning process simpler and more effective": "Semplifica i tuoi studi di una nuova lingua con l'AI.\nImpara più velocemente ed in modo più efficace con la nostra piattaforma.\nLa nostra piattaforma utilizza l'intelligenza artificiale per personalizzare l'apprendimento delle lingue, adeguandosi alle tue esigenze e al tuo ritmo. Vengono utilizzati modelli per offrire esperienze di apprendimento personalizzate, rendendo il processo di apprendimento più semplice e più efficace.",
+    "Dashboard": "Dashboard",
+    "language learning": "apprendimento linguistico",
+    "artificial intelligence": "intelligenza artificiale",
+    "content personalization": "personalizzazione dei contenuti",
+    "learning efficiency": "efficienza di apprendimento",
+    "learning platform": "piattaforma di apprendimento",
+    "AI models": "modelli di intelligenza artificiale",
+    "AI-powered pronunciation testing": "test di pronuncia alimentati dall'IA",
+    "AI-powered response correction": "correzione delle risposte alimentata dall'IA",
+    "personalized learning experience": "esperienza di apprendimento personalizzata",
+    "simplified language study": "studio semplificato della lingua",
+    "accelerated learning": "apprendimento accelerato"
 }
