--- a/locales/pt.json
+++ b/locales/pt.json
@@ -305,5 +305,18 @@
     "Select language": "Selecionar idioma",
     "You have successfully set up a new language to learn!": "Você configurou com sucesso um novo idioma para aprender!",
     "Don't forget to study with the Petutors": "Não se esqueça de estudar com os Petutors",
-    "Current": "Atual"
+    "Current": "Atual",
+    "Simplify Your Studies of a New Language with AI\nLearn Faster and More Effectively with Our Platform\nOur platform uses artificial intelligence to personalize language learning, adapting to your individual needs and pace Models are used to offer personalized learning experiences, making the learning process simpler and more effective": "Simplifique seus estudos de um novo idioma com IA.\nAprenda mais rápido e de forma mais eficaz com nossa plataforma.\nNossa plataforma utiliza inteligência artificial para personalizar o aprendizado de idiomas, se adaptando às suas necessidades individuais e ritmo. Modelos são usados para oferecer experiências de aprendizado personalizadas, tornando o processo de aprendizado mais simples e eficaz.",
+    "Dashboard": "Painel de controle",
+    "language learning": "aprendizado de idiomas",
+    "artificial intelligence": "inteligência artificial",
+    "content personalization": "personalização de conteúdo",
+    "learning efficiency": "eficiência de aprendizado",
+    "learning platform": "plataforma de aprendizado",
+    "AI models": "modelos de IA",
+    "AI-powered pronunciation testing": "teste de pronúncia alimentado por IA",
+    "AI-powered response correction": "correção de resposta alimentada por IA",
+    "personalized learning experience": "experiência de aprendizado personalizada",
+    "simplified language study": "estudo simplificado de idiomas",
+    "accelerated learning": "aprendizado acelerado"
 }
