--- a/locales/fr.json
+++ b/locales/fr.json
@@ -318,5 +318,10 @@
     "AI-powered response correction": "correction de réponse alimentée par l'IA",
     "personalized learning experience": "expérience d'apprentissage personnalisée",
     "simplified language study": "étude simplifiée des langues",
-    "accelerated learning": "apprentissage accéléré"
+    "accelerated learning": "apprentissage accéléré",
+    "Section {count}, Unit {unitCount}": "Section {count}, Unité {unitCount}",
+    "Start": "Commencer",
+    "You are learning {lang}": "Vous apprenez {lang}",
+    "Do you want to learn another language? Click here": "Voulez-vous apprendre une autre langue? Cliquez ici",
+    "Your progress": "Votre progression"
 }
