--- a/locales/es.json
+++ b/locales/es.json
@@ -318,5 +318,10 @@
     "AI-powered response correction": "corrección de respuestas impulsada por IA",
     "personalized learning experience": "experiencia de aprendizaje personalizada",
     "simplified language study": "estudio de idioma simplificado",
-    "accelerated learning": "aprendizaje acelerado"
+    "accelerated learning": "aprendizaje acelerado",
+    "Start": "Comienzo",
+    "You are learning {lang}": "Estás aprendiendo {lang}",
+    "Do you want to learn another language? Click here": "¿Quieres aprender otro idioma? Haz clic aquí",
+    "Your progress": "Tu progreso",
+    "Section {count}, Unit {unitCount}": "Sección {count}, Unidad {unitCount}"
 }
